analyzer/mql/mql/MqlParser.java
/* Generated By:JJTree&JavaCC: Do not edit this line. MqlParser.java */
import java.io.*;

public class MqlParser/*@bgen(jjtree)*/implements MqlParserTreeConstants, MqlParserConstants {/*@bgen(jjtree)*/
  protected static JJTMqlParserState jjtree = new JJTMqlParserState();public static void main(String args[]) {
    try {
      FileReader inputFile = new FileReader(args[0]);
      MqlParser t = new MqlParser(inputFile);
      SimpleNode n = t.Root();
      n.dump("");
      System.out.println("Thank you.");
    } catch (Exception e) {
      System.out.println("Oops.");
      System.out.println(e.getMessage());
      e.printStackTrace();
    }
  }

/*
 * Here begins the actual grammar for MQL.
 */
  static final public MqlRoot Root() throws ParseException {
                  /*@bgen(jjtree) Root */
  MqlRoot jjtn000 = new MqlRoot(JJTROOT);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      ModuleDeclaration();
      label_1:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case IMPORT:
        case NTUPLE_IMPORT:
        case EXPORT:
        case SELECT:
        case JOIN:
        case CLUSTER:
        case NTUPLE:
        case MERGE:
        case HISTOGRAM1D:
        case HISTOGRAMS1D:
        case HISTOGRAM2D:
        case HISTOGRAMS2D:
        case HISTOGRAM3D:
        case HISTOGRAMS3D:
        case LITERAL:
          ;
          break;
        default:
          jj_la1[0] = jj_gen;
          break label_1;
        }
        Statement();
      }
      jj_consume_token(0);
    jjtree.closeNodeScope(jjtn000, true);
    jjtc000 = false;
    {if (true) return jjtn000;}
    } catch (Throwable jjte000) {
    if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
    throw new Error("Missing return statement in function");
  }

  static final public void ModuleDeclaration() throws ParseException {
                            /*@bgen(jjtree) ModuleDeclaration */
  MqlModuleDeclaration jjtn000 = new MqlModuleDeclaration(JJTMODULEDECLARATION);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      jj_consume_token(MODULE);
      Identifier();
      jj_consume_token(SEMICOLON);
    } catch (Throwable jjte000) {
    if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
  }

  static final public void Statement() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case IMPORT:
      ImportStatement();
      break;
    case NTUPLE_IMPORT:
      NtupleImportStatement();
      break;
    case EXPORT:
      ExportStatement();
      break;
    case SELECT:
      SelectStatement();
      break;
    case JOIN:
      JoinStatement();
      break;
    case CLUSTER:
      ClusterStatement();
      break;
    case MERGE:
      MergeStatement();
      break;
    case NTUPLE:
      NtupleStatement();
      break;
    case HISTOGRAM1D:
      Histogram1DStatement();
      break;
    case HISTOGRAMS1D:
      Histograms1DStatement();
      break;
    case HISTOGRAM2D:
      Histogram2DStatement();
      break;
    case HISTOGRAMS2D:
      Histograms2DStatement();
      break;
    case HISTOGRAM3D:
      Histogram3DStatement();
      break;
    case HISTOGRAMS3D:
      Histograms3DStatement();
      break;
    case LITERAL:
      LiteralStatement();
      break;
    default:
      jj_la1[1] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  static final public void BankName() throws ParseException {
                   /*@bgen(jjtree) BankName */
  MqlBankName jjtn000 = new MqlBankName(JJTBANKNAME);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      Identifier();
    } catch (Throwable jjte000) {
    if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
  }

  static final public void Type() throws ParseException {
               /*@bgen(jjtree) Type */
  MqlType jjtn000 = new MqlType(JJTTYPE);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case BOOL:
        jj_consume_token(BOOL);
             jjtree.closeNodeScope(jjtn000, true);
             jjtc000 = false;
             jjtn000.set(MqlType.BOOLEAN);
        break;
      case BYTE:
        jj_consume_token(BYTE);
             jjtree.closeNodeScope(jjtn000, true);
             jjtc000 = false;
             jjtn000.set(MqlType.BYTE);
        break;
      case SHORT:
        jj_consume_token(SHORT);
              jjtree.closeNodeScope(jjtn000, true);
              jjtc000 = false;
              jjtn000.set(MqlType.SHORT);
        break;
      case INT:
        jj_consume_token(INT);
               jjtree.closeNodeScope(jjtn000, true);
               jjtc000 = false;
               jjtn000.set(MqlType.INTEGER);
        break;
      case FLOAT:
        jj_consume_token(FLOAT);
              jjtree.closeNodeScope(jjtn000, true);
              jjtc000 = false;
              jjtn000.set(MqlType.FLOAT);
        break;
      case DOUBLE:
        jj_consume_token(DOUBLE);
               jjtree.closeNodeScope(jjtn000, true);
               jjtc000 = false;
               jjtn000.set(MqlType.DOUBLE);
        break;
      case STRUCT:
        jj_consume_token(STRUCT);
        Identifier();
                            jjtree.closeNodeScope(jjtn000, true);
                            jjtc000 = false;
                            jjtn000.set(MqlType.STRUCT);
        break;
      default:
        jj_la1[2] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    } catch (Throwable jjte000) {
     if (jjtc000) {
       jjtree.clearNodeScope(jjtn000);
       jjtc000 = false;
     } else {
       jjtree.popNode();
     }
     if (jjte000 instanceof RuntimeException) {
       {if (true) throw (RuntimeException)jjte000;}
     }
     if (jjte000 instanceof ParseException) {
       {if (true) throw (ParseException)jjte000;}
     }
     {if (true) throw (Error)jjte000;}
    } finally {
     if (jjtc000) {
       jjtree.closeNodeScope(jjtn000, true);
     }
    }
  }

  static final public void ColumnEntry() throws ParseException {
                      /*@bgen(jjtree) ColumnEntry */
  MqlColumnEntry jjtn000 = new MqlColumnEntry(JJTCOLUMNENTRY);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case BOOL:
      case BYTE:
      case SHORT:
      case INT:
      case FLOAT:
      case DOUBLE:
      case STRUCT:
        Type();
        break;
      default:
        jj_la1[3] = jj_gen;
        ;
      }
      Identifier();
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 60:
        jj_consume_token(60);
        Expression();
        break;
      default:
        jj_la1[4] = jj_gen;
        ;
      }
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 61:
        jj_consume_token(61);
        break;
      default:
        jj_la1[5] = jj_gen;
        ;
      }
    } catch (Throwable jjte000) {
    if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
  }

  static final public void ColumnList() throws ParseException {
                     /*@bgen(jjtree) ColumnList */
  MqlColumnList jjtn000 = new MqlColumnList(JJTCOLUMNLIST);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      jj_consume_token(62);
      label_2:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case BOOL:
        case BYTE:
        case SHORT:
        case INT:
        case FLOAT:
        case DOUBLE:
        case STRUCT:
        case IDENTIFIER:
          ;
          break;
        default:
          jj_la1[6] = jj_gen;
          break label_2;
        }
        ColumnEntry();
      }
      jj_consume_token(63);
    } catch (Throwable jjte000) {
    if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
  }

  static final public void Expression() throws ParseException {
                     /*@bgen(jjtree) Expression */
  MqlExpression jjtn000 = new MqlExpression(JJTEXPRESSION);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case IDENTIFIER:
        Identifier();
        break;
      case STRING_LITERAL:
        StringLiteral();
        break;
      default:
        jj_la1[7] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    } catch (Throwable jjte000) {
    if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
  }

  static final public void ImportStatement() throws ParseException {
                          /*@bgen(jjtree) ImportStatement */
  MqlImportStatement jjtn000 = new MqlImportStatement(JJTIMPORTSTATEMENT);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      jj_consume_token(IMPORT);
      TableName();
      jj_consume_token(FROM);
      BankName();
      ColumnList();
      jj_consume_token(SEMICOLON);
    } catch (Throwable jjte000) {
    if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
  }

  static final public void NtupleImportStatement() throws ParseException {
                                /*@bgen(jjtree) NtupleImportStatement */
  MqlNtupleImportStatement jjtn000 = new MqlNtupleImportStatement(JJTNTUPLEIMPORTSTATEMENT);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      jj_consume_token(NTUPLE_IMPORT);
      TableName();
      jj_consume_token(FROM);
      TableName();
      ColumnList();
      jj_consume_token(SEMICOLON);
    } catch (Throwable jjte000) {
    if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
  }

  static final public void ExportStatement() throws ParseException {
                          /*@bgen(jjtree) ExportStatement */
  MqlExportStatement jjtn000 = new MqlExportStatement(JJTEXPORTSTATEMENT);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      jj_consume_token(EXPORT);
      TableName();
      jj_consume_token(TO);
      BankName();
      jj_consume_token(SEMICOLON);
    } catch (Throwable jjte000) {
    if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
  }

  static final public void SelectStatement() throws ParseException {
                          /*@bgen(jjtree) SelectStatement */
  MqlSelectStatement jjtn000 = new MqlSelectStatement(JJTSELECTSTATEMENT);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      jj_consume_token(SELECT);
      jj_consume_token(FROM);
      TableName();
      jj_consume_token(INTO);
      TableName();
      label_3:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case WHERE:
        case ENABLE:
        case ORDER:
          ;
          break;
        default:
          jj_la1[8] = jj_gen;
          break label_3;
        }
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case ORDER:
          SortExpression();
          break;
        case WHERE:
          WhereExpression();
          break;
        case ENABLE:
          EnableExpression();
          break;
        default:
          jj_la1[9] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
      }
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 62:
        ColumnList();
        break;
      default:
        jj_la1[10] = jj_gen;
        ;
      }
      jj_consume_token(SEMICOLON);
    } catch (Throwable jjte000) {
    if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
  }

  static final public void WhereExpression() throws ParseException {
                          /*@bgen(jjtree) WhereExpression */
  MqlWhereExpression jjtn000 = new MqlWhereExpression(JJTWHEREEXPRESSION);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      jj_consume_token(WHERE);
      Expression();
    } catch (Throwable jjte000) {
    if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
  }

  static final public void EnableExpression() throws ParseException {
                           /*@bgen(jjtree) EnableExpression */
  MqlEnableExpression jjtn000 = new MqlEnableExpression(JJTENABLEEXPRESSION);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      jj_consume_token(ENABLE);
      Expression();
    } catch (Throwable jjte000) {
    if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
  }
